--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
-    "@material-ui/icons": "^4.11.3",,
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.12",
     "@mui/styled-engine-sc": "^5.11.11",
@@ -31,7 +31,7 @@
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
-    "styled-components": "^5.3.8"
+    "sstyled-components": "^5.3.8"
   },
   "scripts": {
     "start": "node server/server.js",
