--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
-    "sstyled-components": "^5.3.8"
+    "styled-components": "^5.3.8"
   },
   "scripts": {
     "start": "node server/server.js",
