--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.12",
     "@mui/styled-engine-sc": "^5.11.11",
+    "@sendgrid/mail": "^7.7.0",
     "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "cookie-session": "^2.0.0",
+    "dayjs": "^1.11.7",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
+    "node-cron": "^3.0.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
